feat: Add category functionality for CRUD operations

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,5 @@ MONGODB_URL = mongodb://localhost:27017
 DB_NAME = food_ordering_app
 CORS = *
 PORT = 8000
+REFRESH_TOKEN_SECRET = sdfhHO345Oohdsfh45ohohOSFP45Oha4hhghph-tr8pfavnapfharpethnaf45034fapfhdgu0t5-35yhgupahpgagft-315sahpa-54-327dpfa
+REFRESH_TOKEN_EXPIRY = 10d
